--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">My Application001</string>
+    <string name="app_name">我的新闻客户端</string>
+
+    <string name="news">新闻</string>
+    <string name="image">图片</string>
+    <string name="weather">天气</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 </resources>
