--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
-    <string name="app_name">我的新闻客户端</string>
+    <string name="app_name">i新闻</string>
 
     <string name="news">新闻</string>
     <string name="image">图片</string>
     <string name="weather">天气</string>
+
+    <string name="load_fail">加载数据失败!</string>
+    <string name="image_hit">一次只加载20条，查看更多内容请刷新哦。</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
